<resources>
    <string name="app_name">Connecting people</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>

    <string name="contentDescLogo">logo</string>
    <string name="contentDescIcon">icon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Username</string>
    <string name="save">Save account settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="account_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello_account_fragment">Account fragment</string>
    <string name="hello_notification_fragment">Notification fragment</string>
    <string name="add_description">Add Description....</string>
    <string name="add_post">Add Post</string>
    <string name="username">Username</string>
    <string name="date">Dec 20th, 2021</string>
    <string name="lorem_ipsum">
        Nor is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
        but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
    </string>
    <string name="like_count">69 Like</string>
    <string name="comment_count">420 Comment</string>
    <string name="contentDescImg">image</string>
    <string name="message">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_message_fragment">Message fragment</string>
    <string name="progress">Please wait..</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search ...</string>
    <string name="todo">The functions will be updated in the future</string>
    <string name="type_your_message">Type your message...</string>
    <string name="user">User</string>
    <string name="time">12:00</string>
</resources>