<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottomHome"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottomMessage"
        android:icon="@drawable/baseline_message_black_24dp"
        android:title="@string/message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottomAccount"
        android:icon="@drawable/baseline_account_circle_black_18dp"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottomNotification"
        android:icon="@drawable/baseline_notifications_black_18dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
</menu>