<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:background="@color/white">

    <!--Email Field-->
    <LinearLayout
        android:id="@+id/mail_layout"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/field"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/contentDescIcon"
            android:cropToPadding="false"
            app:srcCompat="@drawable/mail_icon" />

        <EditText
            android:id="@+id/emailResetTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/login"
        android:elevation="0dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_layout"
        app:layout_constraintVertical_bias="0.086" />

    <include
        android:id="@+id/progressBarReset"
        layout="@layout/progress_bar_with_text"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>